1. Brought back resize function for panel items 2. Fixed scrollbar width which caused tabbar tabs' length appeared wierd when collapse 3. Removed a icon and replaced it with black stuff... 4. etc

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -8,7 +8,7 @@
   --linux-header: calc(var(--window-border) + 20px);
   --addressbar-height: 36px;
   --window-button-scale: 0.8;
-  --window-button-opacity: 0.3;
+  --window-button-opacity: 0.3
   /*--tab-padding: calc(var(--window-border) / 2);*/
   --tab-padding: 0;
   --colorToviTransparent: transparent;
@@ -359,6 +359,15 @@ button[title="显示输入记录"] {
   background-color: transparent;
   overflow: visible;
 }
+
+.WorkspacePopup-Items {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 
 /* ========================================
    DOWNLOAD PROGRESS STYLING
